--- a/frontend/static/css/main.css
+++ b/frontend/static/css/main.css
@@ -5,14 +5,14 @@
 }
 
 body {
-    background-image: url("../images/funky-lines.png");
-    background-repeat: repeat;
+    background-color: red;
 }
 
 main {
+    background-image: url("../images/funky-lines.png");
+
     height: 100vh;
     width: 100vw;
-    background-color: rgba(236, 46, 12, 0.75);
     display: flex;
     justify-content: center;
     align-items: center;
